Bug 159510 - krunner doesn't store settings
Summary: krunner doesn't store settings
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 165346 170526 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-03-18 10:58 UTC by Stefano Crocco
Modified: 2008-10-23 23:26 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefano Crocco 2008-03-18 10:58:29 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc (GCC) 4.2.3 (Gentoo 4.2.3 p1.0) 

Krunner doesn't seem to store settings like history and custom setting for completion mode. I know that history used to be saved (I can't say when it stopped working). Then I noticed that, after logging in, I couldn't reach the last program I launched using the up arrow key: pressing it give me another entry. This made me think that history wasn't being saved anymore and that the entry I got was the first one in the history when history stoppedd being saved. I then tried removing the .kde/share/config/krunnerrc file, to see if some old configuration was messing things up. After that, history stopped working completely across sessions. I looked at the kde/share/config/ directory and found out that the krunnerrc file had not been recreated as it usually happens with kde applications when such files don't exist.
Comment 1 Clemens 2008-04-03 06:14:45 UTC
Same here on SVN (2008-04-03). Krunner does not save history and completion mode.
Comment 2 Andrew Beames 2008-06-27 19:46:11 UTC
krunner 0.1; kde 4.0.4; suse 11.0

commands entered are not saved between sessions.

Previously (kde 3.5; suse 10.3) ALT-F2 gave all previous commands.
They were stored in ~/.kde/share/config/kdesktoprc in key [MiniCli]
Comment 3 Carsten Schlipf 2008-07-20 22:18:12 UTC
krunner 0.1; kde 4.1 RC1; kubuntu hardy heron

same behaviour here.
Comment 4 Aaron J. Seigo 2008-07-21 01:58:06 UTC
*** Bug 165346 has been marked as a duplicate of this bug. ***
Comment 5 Pascal Hofmann 2008-09-04 05:13:13 UTC
same behaviour with kde 4.1.1 on kubuntu hardy heron
Comment 6 Bram Schoenmakers 2008-09-06 16:28:41 UTC
*** Bug 170526 has been marked as a duplicate of this bug. ***
Comment 7 Alexander Yustus 2008-10-02 07:11:20 UTC
*** This bug has been confirmed by popular vote. ***
Comment 8 kavol 2008-10-16 16:38:30 UTC
same on Fedora; btw, it looses history not just between sessions but also after a crash, but it is obvious from the nature of the problem
Comment 9 Dmitry Suzdalev 2008-10-23 23:26:06 UTC
SVN commit 875278 by dimsuz:

- Make krunner actually save its config
- Move some config keys to the group they logically belong to
- Make sure that completion object is populated with history items

BUG: 159510


 M  +4 -1      interface.cpp  
 M  +10 -11    krunner.kcfg  


WebSVN link: http://websvn.kde.org/?view=rev&revision=875278