- Make krunner actually save its config - Move some config keys to the group they logically belong to - Make sure that completion object is populated with history items

BUG: 159510

svn path=/trunk/KDE/kdebase/workspace/; revision=875278